--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "qr-microservice",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "@sparticuz/chromium": "^120.0.0",
     "express": "^4.18.2",
-    "qr-code-styling-node": "^1.5.3",
-    "puppeteer-core": "^21.3.0"
+    "body-parser": "^1.20.2",
+    "qr-code-styling-node": "^1.7.0",
+    "puppeteer-core": "^24.0.0",
+    "@sparticuz/chromium": "^123.0.1"
   }
 }
