--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "puppeteer": "^24.2.0"
+    "puppeteer": "^24.2.0",
+    "cors": "^2.8.5"
   }
 }
